# actix-web-login-system

./: Cargo.toml  README.md  docker-compose.yaml
data/: dump.rdb
src/: main.rs
src/database/: erros.rs  mod.rs  models.rs
src/routes/: mod.rs
src/routes/account/: erros.rs  mod.rs
static/css/: styles.css
static/html/: index.html
static/html/account/: login.html  profile.html  register.html
templates/: index.html  login.html  register.html  template.html
