[package]
name = "login_system"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-session = { version = "0.9.0", features = ["redis-rs-session"] }
actix-web = "4.5.1"
askama = "0.12.1"
# env_logger = "0.11.2"
serde = { version = "1.0.197", features = ["derive"] }
surrealdb = "1.2.0"
uuid = { version = "1.7.0", features = ["v4"] }
